--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -87,8 +87,9 @@
 
     </div>
     <div class="row">
-      <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no"
-      src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=1&speed=0&skin=1&isTitle=1&noborder=1&isWeibo=1&isFans=0&uid=1935194357&verifier=8e958b8d&dpc=1">
+      <iframe width="100%" height="300" class="share_self"  frameborder="0" scrolling="no"
+      src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=300&fansRow=2&ptype=1&speed=0&skin=1&isTitle=1&noborder=1&isWeibo=1&isFans=0&uid=1935194357&verifier=8e958b8d&dpc=1">
+      </iframe>
       </iframe>
     </div>
   </div>
